2009-09-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/Change.cs:
	* MonoDevelop.Refactoring/RefactoringOptions.cs:
	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	  Fixed Bug 537927 - "Create" refactorings on member method
	  are broken/enh. create method on called member

2009-09-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Refactoring/RefactoryCommands.cs: In
	  FindReferencesThread, report exceptions to the monitor
	  instead of letting them reach the top of the thread and
	  crash MD.

2009-09-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	  Made it a bit more strict where code generator is valid.

2009-09-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.CreateClass/CreateClassCodeGenerator.cs:
	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	  Fixed "Bug 537927 - "Create" refactorings on member method
	  are broken".

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/RefactoryCommands.cs: Added shortcut
	  key for encapsulate fields command.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.IntegrateTemporaryVariable/IntegrateTemporaryVariableRefactoring.cs:
	  Added integrate temporary variable to translation.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.RefactorImports/SortImportsRefactoring.cs:
	  Fixed bug in sort usings.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.csproj: 

	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  Fixed translation of declare local.

2009-09-09  Christian Hergert  <chris@dronelabs.com>

	* MonoDevelop.Refactoring/RefactoryCommands.cs: 
	* MonoDevelop.Refactoring.IntroduceConstant/IntroduceConstantRefactoring.cs: 
	* MonoDevelop.Refactoring.Rename/RenameRefactoring.cs: 