@@ -171,8 +171,9 @@ namespace MonoDevelop.Refactoring.ConvertPropery
 
 		MemberReferenceCollection GetReferences (RefactoringOptions options, IMember member)
 		{
-			CodeRefactorer refactorer = new CodeRefactorer (options.Document.Project.ParentSolution);
-			refactorer.TextFileProvider = options.TestFileProvider;
+			CodeRefactorer refactorer = IdeApp.Workspace.GetCodeRefactorer (IdeApp.ProjectOperations.CurrentSelectedSolution);
+			if (options.TestFileProvider != null)
+				refactorer.TextFileProvider = options.TestFileProvider;
 			IProgressMonitor monitor = IdeApp.Workbench != null ? IdeApp.Workbench.ProgressMonitors.GetBackgroundProgressMonitor (this.Name, null) : new MonoDevelop.Core.ProgressMonitoring.NullProgressMonitor ();
 			return refactorer.FindMemberReferences (monitor, member.DeclaringType, member, true);
 		}
